syntax = "proto3";
package todoPackage;

service Todo {
    rpc createTodo(TodoItem) returns (Count);
    rpc getTodos(Empty) returns (TodoItems);
}

message Empty {}

message TodoItem {
    string location = 1;
}
message Count {
    string count = 1;
}

message TodoItems {
    repeated TodoItem items = 1;
}